--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="wrapper">
         <div class="top">
             <div class="container">
-                <div class="men">
+                <div class="menu">
                     <ul class="anchor">
                         <li class="list"><a href="index.html"><img src="img/logo.svg" alt="logo"></a></li>
                         <li class="list"><a href="contact.html"><img src="img/Contacts.svg" alt="contacts"></a></li>
